fixed the rogue spacing issue at the start of code blocks in the YAML view component.

--- a/src/assets/styles/utilities.scss
+++ b/src/assets/styles/utilities.scss
@@ -174,9 +174,9 @@
 }
 
 code {
-  padding: 0.2rem 0.4rem;
-  font-size: 90%;
-  color: #bd4147;
-  background-color: #f7f7f9;
-  border-radius: 0.25rem;
+  // padding: 0.2rem 0.4rem;
+  // font-size: 90%;
+  // color: #bd4147;
+  // background-color: #f7f7f9;
+  // border-radius: 0.25rem;
 }
